...
    
  } // releaseList
  
  
  private var headerText: some View {
    VStack(spacing: 20) {
      Text("Contract Finder")
        .font(.title)
        .foregroundColor(Constants.textColor)
      
      Text(Constants.searchMessage)
        .foregroundColor(Constants.textColor)
        .font(.title2)
...
      }
    }
  label: {
    if cfViewModel.cfModel.sortStatus == .alpha {
      Text("Date")
    } else {
      Text("A-Z")
    }
    Image(systemName: "arrow.up.arrow.down")
  } // label
  .foregroundColor(Constants.textColor)
  .font(.title)
  } // showSortButton
...
