...
  static let textColor        = Color.white
  static let noContracts      = "No contracts"
  
  static let mailOnSimulator      = "Mail is not enabled when running on the simulator"
  static let telephoneOnSimulator = "Telephone is not enabled when running on the simulator"
  
  static let searchMessage = """
Tap the magnifying glass to search using the default settings,
or select the settings option to set the search parameters.
"""
} // struct Constants


